@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-25T01:38:45Z",
+  "timestamp" : "2025-12-26T01:38:23Z",
   "count_outdated" : 1461,
   "uniques_outdated" : 981,
-  "count" : 1463,
-  "uniques" : 983,
+  "count" : 1464,
+  "uniques" : 984,
   "clones" : [
     {
       "timestamp": "2025-12-20T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-12-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
