@@ -1,3 +1,12 @@
+2025-12-26T01:38:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20513880091 # 850
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-26
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 981 1461 / 983 1463
+* notice: next accum: outdated-unq outdated-all / unq all: 981 1461 / 984 1464
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-12-25]
+
 2025-12-25T01:38:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20496964224 # 849
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-25
